# circuit-board-ml

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.sh
cmd_circuit/: local_batch_request.py  train_dev_cloud
documentation/: diagram.py
notebooks/: exploration.ipynb
src/: app_serve.py  app_train.py
src/input/config/: base_config.py  config.py  model_config.py
src/models/architecture/: architecture_definition.py  base_architecture.py  mobile_net.py
src/models/components/: base_componets.py  mobile_net_component.py
src/preprocess/: lite_preprocess.py  preprocess.py  preprocess_definition.py
src/utils/: config.py  log.py  logger.py
webapp/: app-prod.py  app.py
webapp_fastapi/: app.py
webapp_flask/: app.py
webapp_flask/templates/: home.html
