[tool.poetry]
name = "circuit-board-ml"
version = "0.1.0"
description = ""
authors = ["paulo.yun <paulo.yun@gmail.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.5"
scikit-learn = "^1.1.3"
matplotlib = "^3.6.2"
pandas = "^1.5.2"
opencv-python = "^4.6.0.66"
diagrams = "^0.23.1"
flask = "^2.2.2"
lime = "^0.2.0.1"
fastapi = "^0.88.0"
jinja2 = "^3.1.2"
pytest = "^7.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
